fixed window height calculation on mobiles, replaced stub pictures with served by imgix

--- a/styles/sass/abstracts/_mixins.scss
+++ b/styles/sass/abstracts/_mixins.scss
@@ -1,3 +1,11 @@
 @mixin slideDownDelayed($delay) {
   animation: slideDown 0.4s ease-in-out $delay backwards;
 }
+
+@mixin clearfix {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
