--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -2,3 +2,8 @@
 
 $color-white: white;
 $color-violet: #510860;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
